# language-steering-in-latent-space

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
data/: pca_projections_final_layer_qwen.json  pca_projections_mid_layer_qwen.json  ted_talks.jsonl  ted_talks_code_switching_last_10_words.jsonl  ted_talks_code_switching_last_3_words.jsonl  ted_talks_code_switching_most.jsonl  ted_talks_code_switching_second_half.jsonl  toy_data.json  wikipedia.jsonl  wikipedia_code_switching_single_word_0_30.jsonl  wikipedia_code_switching_single_word_40_50.jsonl
src/core/gather_data/: hidden_space.py
src/core/integration/: SteeredQwen2DecoderLayer.py
src/core/preprocess_data/: flores_plus.py
src/core/steering/: pca.py
src/core/synthetic_data/: generate_code_switching.py  generate_code_switching_single_word.py
src/core/utils/: language_map.py  theme.py
src/core/visualize/: visualize_explained_variance.py  visualize_projections.py  visualize_projections_3d.py
src/experiments/: mean_split_gemma_flores_plus.ipynb  pca_classifier_qwen.ipynb  pca_split.ipynb  pca_split_gemma_flores_plus_en_ru.ipynb  pca_split_gemma_opus_books_en_ru.ipynb  pca_split_llama_flores_plus.ipynb  pca_split_llama_flores_plus_en_ru.ipynb  pca_split_llama_opus_books_en_ru.ipynb  pca_split_llama_toy.ipynb  pca_split_mgpt.ipynb  pca_split_qwen.ipynb  pca_split_qwen_flores_plus_en_ru.ipynb  pca_split_qwen_opus_books_en_ru.ipynb  pca_split_qwen_toy.ipynb
src/experiments/code_switching_analysis/: pca_split_qwen_ted_talks_half_en_cn.ipynb  pca_split_qwen_ted_talks_half_en_es.ipynb  pca_split_qwen_ted_talks_half_en_hin.ipynb  pca_split_qwen_ted_talks_half_en_ru.ipynb
src/experiments/data_preparation/: ted_talks_generate_code_switching_last_5_words_0_20.py  ted_talks_generate_code_switching_most_0_20.py  ted_talks_generate_code_switching_second_half_0_20.py  ted_talks_subset.py  wikipedia_generate_code_switching_single_word.py  wikipedia_generate_code_switching_single_word_0_30.py  wikipedia_generate_code_switching_single_word_40_50.py  wikipedia_subset.py
src/lexical_reflections/pca/: analyze.py  (+2 more)
(+9 files in other folders)
