[project]
name = "language-steering-in-latent-space"
version = "0.1.0"
description = "Language steering in latent space to mitigate unintended code-switchinge"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "adjusttext>=1.3.0",
    "datasets>=4.0.0",
    "huggingface-hub[cli]>=0.34.4",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.5",
    "kagglehub[pandas-datasets]>=0.3.13",
    "matplotlib>=3.10.0",
    "mlxtend>=0.23.4",
    "mplcursors>=0.7",
    "numpy>=2.2.3",
    "openai>=1.109.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = [
  "src/core"
]
